# torchvision-fasterrcnn

./: .gitmodules  README.md  coco_utils.py  default.nix  default_poetry.nix  engine.py  flake.nix  inference.py  pyproject.toml  test.py  train.py
nix/: default.nix
patches/: pycocotools.patch
src/: bdd100k_objects_utils.py  classification.py  coco_eval.py  coco_utils.py  engine.py  export_weights.py  gen_feature_map.py  gen_feature_map_from_whole_camera.py  import_weights.py  inference.py  log2json.py  test.py  train.py  yolo2coco.py
