[tool.poetry]
name = "torchvision-fasterrcnn"
version = "0.1.0"
description = ""
authors = ["Junji Hashimoto <junji.hashimoto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.9.0"
torchvision = "numpy"
pycocotools = "^2.0.2"
Pillow = "^8.3.1"
opencv-python = "^4.5.3"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    'setuptools',
    'scikit-build'
]
build-backend = "poetry.core.masonry.api"
